push apres ajouter les crud du 2eme tables commandes

--- a/view/frontoffice/contact.html
+++ b/view/frontoffice/contact.html
@@ -64,7 +64,7 @@
                                                     <li><a href="blog.html">Blog</a></li>
                                                     <li><a href="single-blog.html">Blog Details</a></li>
                                                     <li><a href="elements.html">Elements</a></li>
-                                                    <li><a href="commandes.html">Les commandes</a></li>
+                                                    <li><a href="commandes.html">Les services</a></li>
                                                 </ul>
                                             </li>
                                             <li><a href="contact.html">Contact</a></li>
