--- a/view/backoffice/pages/notifications.html
+++ b/view/backoffice/pages/notifications.html
@@ -336,9 +336,7 @@
       <div class="position-fixed bottom-1 end-1 z-index-2">
         <div class="toast fade hide p-2 bg-white" role="alert" aria-live="assertive" id="successToast" aria-atomic="true">
           <div class="toast-header border-0">
-            <i class="material-icons text-success me-2">
-        check
-      </i>
+            <i class="material-icons text-success me-2">check</i>
             <span class="me-auto font-weight-bold">Material Dashboard </span>
             <small class="text-body">11 mins ago</small>
             <i class="fas fa-times text-md ms-3 cursor-pointer" data-bs-dismiss="toast" aria-label="Close"></i>
