--- a/view/frontoffice/about.html
+++ b/view/frontoffice/about.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Job board HTML-5 Template </title>
+        <title>QuickHire</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="manifest" href="site.webmanifest">
-		<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="assets/img/image_2024-03-10_171426764-removebg-preview.png">
 
 		<!-- CSS here -->
             <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -31,8 +31,7 @@
             <div class="preloader-inner position-relative">
                 <div class="preloader-circle"></div>
                 <div class="preloader-img pere-text">
-                    <img src="assets/img/logo/logo.png" alt="">
-                </div>
+                    <img src="assets/img/image_2024-03-10_171426764-removebg-preview.png" alt="">
             </div>
         </div>
     </div>
@@ -46,7 +45,7 @@
                         <div class="col-lg-3 col-md-2">
                             <!-- Logo -->
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                                <a  href="index.html"><img width="200" height="150" src="assets/img/image_2024-03-10_171426764-removebg-preview.png" alt=""></a>
                             </div>  
                         </div>
                         <div class="col-lg-9 col-md-9">
@@ -66,7 +65,7 @@
                                                     <li><a href="commandes.html">Les commandes</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="contact.html">Abassi Fedi 2A24</a></li>
+                                            <li><a href="contact.php">chatGPT</a></li>
                                         </ul>
                                     </nav>
                                 </div>          
