--- a/view/frontoffice/single-blog.html
+++ b/view/frontoffice/single-blog.html
@@ -4,10 +4,10 @@
 <head>
    <meta charset="utf-8">
    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Job board HTML-5 Template </title>
+    <title>Détails de l'article</title>
    <meta name="description" content="">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+   <link rel="shortcut icon" type="image/x-icon" href="assets/img/image_2024-03-10_171426764-removebg-preview.png">
   
    <!-- CSS here -->
       <link rel="stylesheet" href="assets/css/bootstrap.min.css">
