--- a/view/frontoffice/formulaire_tache.html
+++ b/view/frontoffice/formulaire_tache.html
@@ -117,6 +117,7 @@
                      
                       <label for="titre_ser">ID du project:</label>
                       <input type="text" id="idp" name="idp" onblur="verifIDp()">
+                      <span id="idspan"></span>
                       <br><br>
                       <label for="titre_ser">Nom du tache:</label>
                       <input type="text" id="nom" name="tachename" onblur="verifNom()">
