Intégration avec USER

--- a/view/User/user.html
+++ b/view/User/user.html
@@ -96,6 +96,7 @@
                 <input type="password" name="Password" id="Password" placeholder="Password" />
                 <a onclick=" showForgotPasswordForm()" style="cursor: pointer;">Forgot your password?</a>
                 <button>Sign In</button>
+                <a href="../../view/frontoffice/index.php" class="btn btn-secondary">page d'accueil</a>
             </form>
         </div>
         <div class="form-container forgot-password-container" style="display: none;">
